Fix alignment on mobile

--- a/resources/assets/less/bem/forum-topic-entry.less
+++ b/resources/assets/less/bem/forum-topic-entry.less
@@ -39,6 +39,7 @@
       display: flex;
       align-items: center;
       flex-direction: column;
+      align-self: center;
     }
 
     &--last-link {
